generator/preprocessed/raylib.h


typedef struct Vector2 {
    float x;
    float y;
} Vector2;
typedef struct Vector3 {
    float x;
    float y;
    float z;
} Vector3;
typedef struct Matrix {
    float m0;
    float m1;
    float m2;
    float m3;
    float m4;
    float m5;
    float m6;
    float m7;
    float m8;
    float m9;
    float m10;
    float m11;
    float m12;
    float m13;
    float m14;
    float m15;
} Matrix;
typedef struct Color {
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
typedef struct Rectangle {
    float x;
    float y;
    float width;
    float height;
} Rectangle;
typedef struct Image {
    void *data;             
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Image;
typedef struct Texture2D {
    unsigned int id;        
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Texture2D;
typedef struct CharInfo {
    int value;              
    Rectangle rec;          
    int offsetX;            
    int offsetY;            
    int advanceX;           
    unsigned char *data;    
} CharInfo;
typedef struct Font {
    Texture2D texture;      
    int baseSize;           
    int charsCount;         
    CharInfo *chars;        
} Font;
typedef struct Camera3D {
    Vector3 position;       
    Vector3 target;         
    Vector3 up;             
    float fovy;             
    int type;               
} Camera3D;
#define Camera Camera3D     
typedef struct BoundingBox {
    Vector3 min;            
    Vector3 max;            
} BoundingBox;
typedef struct Mesh {
    int vertexCount;        
    int triangleCount;      
    float *vertices;        
    float *texcoords;       
    float *texcoords2;      
    float *normals;         
    float *tangents;        
    unsigned char *colors;  
    unsigned short *indices;
    float *baseVertices;    
    float *baseNormals;     
    float *weightBias;      
    int *weightId;          
    unsigned int vaoId;     
    unsigned int vboId[7];  
} Mesh;
typedef struct Shader {
    unsigned int id;                
    int locs[MAX_SHADER_LOCATIONS]; 
} Shader;
typedef struct MaterialMap {
    Texture2D texture;      
    Color color;            
    float value;            
} MaterialMap;
typedef struct Material {
    Shader shader;          
    MaterialMap maps[MAX_MATERIAL_MAPS]; 
    float *params;          
} Material;
typedef struct Model {
    Mesh mesh;              
    Matrix transform;       
    Material material;      
} Model;
typedef struct Ray {
    Vector3 position;       
    Vector3 direction;      
} Ray;
typedef struct RayHitInfo {
    bool hit;               
    float distance;         
    Vector3 position;       
    Vector3 normal;         
} RayHitInfo;
RLAPI void DrawTextRec(Font font, const char *text, Rectangle rec, float fontSize, float spacing, bool wordWrap, Color tint);   
RLAPI void DrawTextRecEx(Font font, const char *text, Rectangle rec, float fontSize, float spacing, bool wordWrap, Color tint, 
                         int selectStart, int selectLength, Color selectText, Color selectBack);    
RLAPI int MeasureText(const char *text, int fontSize);                                      
RLAPI Vector2 MeasureTextEx(Font font, const char *text, float fontSize, float spacing);    
RLAPI int GetGlyphIndex(Font font, int character);                                          
RLAPI bool TextIsEqual(const char *text1, const char *text2);                               
RLAPI unsigned int TextLength(const char *text);                                            
RLAPI const char *TextFormat(const char *text, ...);                                        
RLAPI const char *TextSubtext(const char *text, int position, int length);                  
RLAPI const char *TextReplace(char *text, const char *replace, const char *by);             
RLAPI const char *TextInsert(const char *text, const char *insert, int position);           
RLAPI const char *TextJoin(const char **textList, int count, const char *delimiter);        
RLAPI const char **TextSplit(const char *text, char delimiter, int *count);                 
RLAPI void TextAppend(char *text, const char *append, int *position);                       
RLAPI int TextFindIndex(const char *text, const char *find);                                
RLAPI const char *TextToUpper(const char *text);                      
RLAPI const char *TextToLower(const char *text);                      
RLAPI const char *TextToPascal(const char *text);                     
RLAPI int TextToInteger(const char *text);                            
RLAPI void DrawLine3D(Vector3 startPos, Vector3 endPos, Color color);                                    
RLAPI void DrawCircle3D(Vector3 center, float radius, Vector3 rotationAxis, float rotationAngle, Color color); 
RLAPI void DrawCube(Vector3 position, float width, float height, float length, Color color);             
RLAPI void DrawCubeV(Vector3 position, Vector3 size, Color color);                                       
RLAPI void DrawCubeWires(Vector3 position, float width, float height, float length, Color color);        
RLAPI void DrawCubeWiresV(Vector3 position, Vector3 size, Color color);                                  
RLAPI void DrawCubeTexture(Texture2D texture, Vector3 position, float width, float height, float length, Color color); 
RLAPI void DrawSphere(Vector3 centerPos, float radius, Color color);                                     
RLAPI void DrawSphereEx(Vector3 centerPos, float radius, int rings, int slices, Color color);            
RLAPI void DrawSphereWires(Vector3 centerPos, float radius, int rings, int slices, Color color);         
RLAPI void DrawCylinder(Vector3 position, float radiusTop, float radiusBottom, float height, int slices, Color color); 
RLAPI void DrawCylinderWires(Vector3 position, float radiusTop, float radiusBottom, float height, int slices, Color color); 
RLAPI void DrawPlane(Vector3 centerPos, Vector2 size, Color color);                                      
RLAPI void DrawRay(Ray ray, Color color);                                                                
RLAPI void DrawGrid(int slices, float spacing);                                                          
RLAPI void DrawGizmo(Vector3 position);                                                                  
RLAPI Model LoadModel(const char *fileName);                                                            
RLAPI Model LoadModelFromMesh(Mesh mesh);                                                               
RLAPI void UnloadModel(Model model);                                                                    
RLAPI Mesh LoadMesh(const char *fileName);                                                              
RLAPI void UnloadMesh(Mesh *mesh);                                                                      
RLAPI void ExportMesh(Mesh mesh, const char *fileName);                                                 
RLAPI BoundingBox MeshBoundingBox(Mesh mesh);                                                           
RLAPI void MeshTangents(Mesh *mesh);                                                                    
RLAPI void MeshBinormals(Mesh *mesh);                                                                   
RLAPI Mesh GenMeshPoly(int sides, float radius);                                                        
RLAPI Mesh GenMeshPlane(float width, float length, int resX, int resZ);                                 
RLAPI Mesh GenMeshCube(float width, float height, float length);                                        
RLAPI Mesh GenMeshSphere(float radius, int rings, int slices);                                          
RLAPI Mesh GenMeshHemiSphere(float radius, int rings, int slices);                                      
RLAPI Mesh GenMeshCylinder(float radius, float height, int slices);                                     
RLAPI Mesh GenMeshTorus(float radius, float size, int radSeg, int sides);                               
RLAPI Mesh GenMeshKnot(float radius, float size, int radSeg, int sides);                                
RLAPI Mesh GenMeshHeightmap(Image heightmap, Vector3 size);                                             
RLAPI Mesh GenMeshCubicmap(Image cubicmap, Vector3 cubeSize);                                           
RLAPI Material LoadMaterial(const char *fileName);                                                      
RLAPI Material LoadMaterialDefault(void);                                                               
RLAPI void UnloadMaterial(Material material);                                                           
RLAPI void DrawModel(Model model, Vector3 position, float scale, Color tint);                           
RLAPI void DrawModelEx(Model model, Vector3 position, Vector3 rotationAxis, float rotationAngle, Vector3 scale, Color tint); 
RLAPI void DrawModelWires(Model model, Vector3 position, float scale, Color tint);                      
RLAPI void DrawModelWiresEx(Model model, Vector3 position, Vector3 rotationAxis, float rotationAngle, Vector3 scale, Color tint); 
RLAPI void DrawBoundingBox(BoundingBox box, Color color);                                               
RLAPI void DrawBillboard(Camera camera, Texture2D texture, Vector3 center, float size, Color tint);     
RLAPI void DrawBillboardRec(Camera camera, Texture2D texture, Rectangle sourceRec, Vector3 center, float size, Color tint); 
RLAPI bool CheckCollisionSpheres(Vector3 centerA, float radiusA, Vector3 centerB, float radiusB);       
RLAPI bool CheckCollisionBoxes(BoundingBox box1, BoundingBox box2);                                     
RLAPI bool CheckCollisionBoxSphere(BoundingBox box, Vector3 centerSphere, float radiusSphere);          
RLAPI bool CheckCollisionRaySphere(Ray ray, Vector3 spherePosition, float sphereRadius);                
RLAPI bool CheckCollisionRaySphereEx(Ray ray, Vector3 spherePosition, float sphereRadius, Vector3 *collisionPoint); 
RLAPI bool CheckCollisionRayBox(Ray ray, BoundingBox box);                                              
RLAPI RayHitInfo GetCollisionRayModel(Ray ray, Model *model);                                           
RLAPI RayHitInfo GetCollisionRayTriangle(Ray ray, Vector3 p1, Vector3 p2, Vector3 p3);                  
RLAPI RayHitInfo GetCollisionRayGround(Ray ray, float groundHeight);                                    
RLAPI char *LoadText(const char *fileName);                               
RLAPI Shader LoadShader(const char *vsFileName, const char *fsFileName);  
RLAPI Shader LoadShaderCode(char *vsCode, char *fsCode);                  
RLAPI void UnloadShader(Shader shader);                                   
RLAPI Shader GetShaderDefault(void);                                      
RLAPI Texture2D GetTextureDefault(void);                                  
RLAPI int GetShaderLocation(Shader shader, const char *uniformName);              