raylib/raylib_bindings.odin


    @(link_name="DrawTextRec")
    draw_text_rec :: proc(
        font : Font,
        text : cstring,
        rec : Rectangle,
        font_size : _c.float,
        spacing : _c.float,
        word_wrap : bool,
        tint : Color
    ) ---;

    @(link_name="DrawTextRecEx")
    draw_text_rec_ex :: proc(
        font : Font,
        text : cstring,
        rec : Rectangle,
        font_size : _c.float,
        spacing : _c.float,
        word_wrap : bool,
        tint : Color,
        select_start : _c.int,
        select_length : _c.int,
        select_text : Color,
        select_back : Color
    ) ---;

    @(link_name="MeasureText")
    measure_text :: proc(
        text : cstring,
        font_size : _c.int
    ) -> _c.int ---;

    @(link_name="MeasureTextEx")
    measure_text_ex :: proc(
        font : Font,
        text : cstring,
        font_size : _c.float,
        spacing : _c.float
    ) -> Vector2 ---;

    @(link_name="GetGlyphIndex")
    get_glyph_index :: proc(
        font : Font,
        character : _c.int
    ) -> _c.int ---;

    @(link_name="TextIsEqual")
    text_is_equal :: proc(
        text1 : cstring,
        text2 : cstring
    ) -> bool ---;

    @(link_name="TextLength")
    text_length :: proc(text : cstring) -> _c.uint ---;

    @(link_name="TextFormat")
    text_format :: proc(text : cstring) -> cstring ---;

    @(link_name="TextSubtext")
    text_subtext :: proc(
        text : cstring,
        position : _c.int,
        length : _c.int
    ) -> cstring ---;

    @(link_name="TextReplace")
    text_replace :: proc(
        text : cstring,
        replace : cstring,
        by : cstring
    ) -> cstring ---;

    @(link_name="TextInsert")
    text_insert :: proc(
        text : cstring,
        insert : cstring,
        position : _c.int
    ) -> cstring ---;

    @(link_name="TextJoin")
    text_join :: proc(
        text_list : ^cstring,
        count : _c.int,
        delimiter : cstring
    ) -> cstring ---;

    @(link_name="TextSplit")
    text_split :: proc(
        text : cstring,
        delimiter : _c.char,
        count : ^_c.int
    ) -> ^cstring ---;

    @(link_name="TextAppend")
    text_append :: proc(
        text : cstring,
        append : cstring,
        position : ^_c.int
    ) ---;

    @(link_name="TextFindIndex")
    text_find_index :: proc(
        text : cstring,
        find : cstring
    ) -> _c.int ---;

    @(link_name="TextToUpper")
    text_to_upper :: proc(text : cstring) -> cstring ---;

    @(link_name="TextToLower")
    text_to_lower :: proc(text : cstring) -> cstring ---;

    @(link_name="TextToPascal")
    text_to_pascal :: proc(text : cstring) -> cstring ---;

    @(link_name="TextToInteger")
    text_to_integer :: proc(text : cstring) -> _c.int ---;

    @(link_name="DrawLine3D")
    draw_line_3d :: proc(
        start_pos : Vector3,
        end_pos : Vector3,
        color : Color
    ) ---;

    @(link_name="DrawCircle3D")
    draw_circle_3d :: proc(
        center : Vector3,
        radius : _c.float,
        rotation_axis : Vector3,
        rotation_angle : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawCube")
    draw_cube :: proc(
        position : Vector3,
        width : _c.float,
        height : _c.float,
        length : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawCubeV")
    draw_cube_v :: proc(
        position : Vector3,
        size : Vector3,
        color : Color
    ) ---;

    @(link_name="DrawCubeWires")
    draw_cube_wires :: proc(
        position : Vector3,
        width : _c.float,
        height : _c.float,
        length : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawCubeWiresV")
    draw_cube_wires_v :: proc(
        position : Vector3,
        size : Vector3,
        color : Color
    ) ---;

    @(link_name="DrawCubeTexture")
    draw_cube_texture :: proc(
        texture : Texture2D,
        position : Vector3,
        width : _c.float,
        height : _c.float,
        length : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawSphere")
    draw_sphere :: proc(
        center_pos : Vector3,
        radius : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawSphereEx")
    draw_sphere_ex :: proc(
        center_pos : Vector3,
        radius : _c.float,
        rings : _c.int,
        slices : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawSphereWires")
    draw_sphere_wires :: proc(
        center_pos : Vector3,
        radius : _c.float,
        rings : _c.int,
        slices : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawCylinder")
    draw_cylinder :: proc(
        position : Vector3,
        radius_top : _c.float,
        radius_bottom : _c.float,
        height : _c.float,
        slices : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawCylinderWires")
    draw_cylinder_wires :: proc(
        position : Vector3,
        radius_top : _c.float,
        radius_bottom : _c.float,
        height : _c.float,
        slices : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawPlane")
    draw_plane :: proc(
        center_pos : Vector3,
        size : Vector2,
        color : Color
    ) ---;

    @(link_name="DrawRay")
    draw_ray :: proc(
        ray : Ray,
        color : Color
    ) ---;

    @(link_name="DrawGrid")
    draw_grid :: proc(
        slices : _c.int,
        spacing : _c.float
    ) ---;

    @(link_name="DrawGizmo")
    draw_gizmo :: proc(position : Vector3) ---;

    @(link_name="LoadModel")
    load_model :: proc(file_name : cstring) -> Model ---;

    @(link_name="LoadModelFromMesh")
    load_model_from_mesh :: proc(mesh : Mesh) -> Model ---;

    @(link_name="UnloadModel")
    unload_model :: proc(model : Model) ---;

    @(link_name="LoadMesh")
    load_mesh :: proc(file_name : cstring) -> Mesh ---;

    @(link_name="UnloadMesh")
    unload_mesh :: proc(mesh : ^Mesh) ---;

    @(link_name="ExportMesh")
    export_mesh :: proc(
        mesh : Mesh,
        file_name : cstring
    ) ---;

    @(link_name="MeshBoundingBox")
    mesh_bounding_box :: proc(mesh : Mesh) -> BoundingBox ---;

    @(link_name="MeshTangents")
    mesh_tangents :: proc(mesh : ^Mesh) ---;

    @(link_name="MeshBinormals")
    mesh_binormals :: proc(mesh : ^Mesh) ---;

    @(link_name="GenMeshPoly")
    gen_mesh_poly :: proc(
        sides : _c.int,
        radius : _c.float
    ) -> Mesh ---;

    @(link_name="GenMeshPlane")
    gen_mesh_plane :: proc(
        width : _c.float,
        length : _c.float,
        res_x : _c.int,
        res_z : _c.int
    ) -> Mesh ---;

    @(link_name="GenMeshCube")
    gen_mesh_cube :: proc(
        width : _c.float,
        height : _c.float,
        length : _c.float
    ) -> Mesh ---;

    @(link_name="GenMeshSphere")
    gen_mesh_sphere :: proc(
        radius : _c.float,
        rings : _c.int,
        slices : _c.int
    ) -> Mesh ---;

    @(link_name="GenMeshHemiSphere")
    gen_mesh_hemi_sphere :: proc(
        radius : _c.float,
        rings : _c.int,
        slices : _c.int
    ) -> Mesh ---;

    @(link_name="GenMeshCylinder")
    gen_mesh_cylinder :: proc(
        radius : _c.float,
        height : _c.float,
        slices : _c.int
    ) -> Mesh ---;

    @(link_name="GenMeshTorus")
    gen_mesh_torus :: proc(
        radius : _c.float,
        size : _c.float,
        rad_seg : _c.int,
        sides : _c.int
    ) -> Mesh ---;

    @(link_name="GenMeshKnot")
    gen_mesh_knot :: proc(
        radius : _c.float,
        size : _c.float,
        rad_seg : _c.int,
        sides : _c.int
    ) -> Mesh ---;

    @(link_name="GenMeshHeightmap")
    gen_mesh_heightmap :: proc(
        heightmap : Image,
        size : Vector3
    ) -> Mesh ---;

    @(link_name="GenMeshCubicmap")
    gen_mesh_cubicmap :: proc(
        cubicmap : Image,
        cube_size : Vector3
    ) -> Mesh ---;

    @(link_name="LoadMaterial")
    load_material :: proc(file_name : cstring) -> Material ---;

    @(link_name="LoadMaterialDefault")
    load_material_default :: proc() -> Material ---;

    @(link_name="UnloadMaterial")
    unload_material :: proc(material : Material) ---;

    @(link_name="DrawModel")
    draw_model :: proc(
        model : Model,
        position : Vector3,
        scale : _c.float,
        tint : Color
    ) ---;

    @(link_name="DrawModelEx")
    draw_model_ex :: proc(
        model : Model,
        position : Vector3,
        rotation_axis : Vector3,
        rotation_angle : _c.float,
        scale : Vector3,
        tint : Color
    ) ---;

    @(link_name="DrawModelWires")
    draw_model_wires :: proc(
        model : Model,
        position : Vector3,
        scale : _c.float,
        tint : Color
    ) ---;

    @(link_name="DrawModelWiresEx")
    draw_model_wires_ex :: proc(
        model : Model,
        position : Vector3,
        rotation_axis : Vector3,
        rotation_angle : _c.float,
        scale : Vector3,
        tint : Color
    ) ---;

    @(link_name="DrawBoundingBox")
    draw_bounding_box :: proc(
        box : BoundingBox,
        color : Color
    ) ---;

    @(link_name="DrawBillboard")
    draw_billboard :: proc(
        camera : Camera,
        texture : Texture2D,
        center : Vector3,
        size : _c.float,
        tint : Color
    ) ---;

    @(link_name="DrawBillboardRec")
    draw_billboard_rec :: proc(
        camera : Camera,
        texture : Texture2D,
        source_rec : Rectangle,
        center : Vector3,
        size : _c.float,
        tint : Color
    ) ---;

    @(link_name="CheckCollisionSpheres")
    check_collision_spheres :: proc(
        center_a : Vector3,
        radius_a : _c.float,
        center_b : Vector3,
        radius_b : _c.float
    ) -> bool ---;

    @(link_name="CheckCollisionBoxes")
    check_collision_boxes :: proc(
        box1 : BoundingBox,
        box2 : BoundingBox
    ) -> bool ---;

    @(link_name="CheckCollisionBoxSphere")
    check_collision_box_sphere :: proc(
        box : BoundingBox,
        center_sphere : Vector3,
        radius_sphere : _c.float
    ) -> bool ---;

    @(link_name="CheckCollisionRaySphere")
    check_collision_ray_sphere :: proc(
        ray : Ray,
        sphere_position : Vector3,
        sphere_radius : _c.float
    ) -> bool ---;

    @(link_name="CheckCollisionRaySphereEx")
    check_collision_ray_sphere_ex :: proc(
        ray : Ray,
        sphere_position : Vector3,
        sphere_radius : _c.float,
        collision_point : ^Vector3
    ) -> bool ---;

    @(link_name="CheckCollisionRayBox")
    check_collision_ray_box :: proc(
        ray : Ray,
        box : BoundingBox
    ) -> bool ---;

    @(link_name="GetCollisionRayModel")
    get_collision_ray_model :: proc(
        ray : Ray,
        model : ^Model
    ) -> RayHitInfo ---;

    @(link_name="GetCollisionRayTriangle")
    get_collision_ray_triangle :: proc(
        ray : Ray,
        p1 : Vector3,
        p2 : Vector3,
        p3 : Vector3
    ) -> RayHitInfo ---;

    @(link_name="GetCollisionRayGround")
    get_collision_ray_ground :: proc(
        ray : Ray,
        ground_height : _c.float
    ) -> RayHitInfo ---;

    @(link_name="LoadText")
    load_text :: proc(file_name : cstring) -> cstring ---;

    @(link_name="LoadShader")
    load_shader :: proc(
        vs_file_name : cstring,
        fs_file_name : cstring
    ) -> Shader ---;

    @(link_name="LoadShaderCode")
    load_shader_code :: proc(
        vs_code : cstring,
        fs_code : cstring
    ) -> Shader ---;

    @(link_name="UnloadShader")
    unload_shader :: proc(shader : Shader) ---;

    @(link_name="GetShaderDefault")
    get_shader_default :: proc() -> Shader ---;

    @(link_name="GetTextureDefault")
    get_texture_default :: proc() -> Texture2D ---;

    @(link_name="GetShaderLocation")
    get_shader_location :: proc(
        shader : Shader,
        uniform_name : cstring
    ) -> _c.int ---;
